<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"App"</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="title_activity_get">GetActivity</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="hint_password">Password</string>
    <string name="username">Username</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hint_name">Name</string>
    <string name="hint_username">Username</string>


</resources>
