<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/background_shop"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="40dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logoblack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/hint_username"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:backgroundTintMode="@android:color/transparent"
                android:drawableBottom="@android:color/transparent"
                android:ems="10"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/hint_password"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:backgroundTintMode="@android:color/transparent"
                android:cursorVisible="true"
                android:drawableBottom="@android:color/transparent"
                android:ems="10"
                android:maxLength="10"
                android:hint="@string/hint_password"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="25sp"
                android:inputType="textPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="Major"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:backgroundTintMode="@android:color/transparent"
                android:cursorVisible="true"
                android:drawableBottom="@android:color/transparent"
                android:ems="10"
                android:hint="Major"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="25sp"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="Interest"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:backgroundTintMode="@android:color/transparent"
                android:cursorVisible="true"
                android:drawableBottom="@android:color/transparent"
                android:ems="10"
                android:hint="Interest"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="25sp"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="University"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/university"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:backgroundTintMode="@android:color/transparent"
                android:cursorVisible="true"
                android:drawableBottom="@android:color/transparent"
                android:ems="10"
                android:hint="University"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="25sp"
                android:inputType="textMultiLine" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="right" >

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@drawable/transparent_button_selector"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:text="@string/login"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@drawable/transparent_button_selector"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:text="@string/register"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>